# ChangeLog for app-emacs/color-browser
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/color-browser/ChangeLog,v 1.5 2009/05/05 07:50:46 fauli Exp $

  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
  color-browser-0.3-r1.ebuild:
  set explicit RDEPEND

*color-browser-0.3-r1 (22 Mar 2008)

  22 Mar 2008; Ulrich Mueller <ulm@gentoo.org>
  files/60color-browser-gentoo.el, metadata.xml, -color-browser-0.3.ebuild,
  +color-browser-0.3-r1.ebuild:
  Sane default values for palette and theme directories. Add longdescription
  to metadata.

  06 Oct 2007; Ulrich Mueller <ulm@gentoo.org> color-browser-0.3.ebuild:
  Minor QA: quote some variables, whitespace changes.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*color-browser-0.3 (18 May 2006)

  18 May 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +files/0.3-gentoo.patch, +files/60color-browser-gentoo.el, +metadata.xml,
  +color-browser-0.3.ebuild:
  Initial port.  Ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>.
