@@ -1,26 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX 0.3-gentoo.patch 2448 SHA256 1ee805895e63b32912818277e758b4f0d1993544f296ccc6e5c9de32b1c5d50f SHA512 5ba03d5b240c8462e932b3eca044d4af8a17a7f737a66db6605037a5bbd1f9273c5ab424da65b5d2419815fc7b8e955963bbc9d909c07560e2f6ee392fcebe2a WHIRLPOOL 3e4a2040071d998a2b040c3ba44a35d71a4af94d7ceee579fac45d5c2945c167d673f587d2004eb7fa1dbb05c89b0dcd44f3524f55fb74b81b9b5711f32858e3
-AUX 60color-browser-gentoo.el 272 SHA256 422e8c34a64933d7205caea105edb3db8d4bf76e2daf3895655f331b1c625ea5 SHA512 c84ab2b623269cd626a2feede974af6659ad18692dd53dc320dcf7055b605c6d8349354c6cd72b99ee5a3abce45643e1c0c56847ab8a73b3e43d9f994e34d7ce WHIRLPOOL 8d575b02f366e9d7143f5d6bf8876dc0436fb62627549d82734e15df7331b9feb9f71ef592e6843b03e7a24348e1d8027015ff168ade8a50f3ea24ff8c9a7d08
+AUX 60color-browser-gentoo.el 228 SHA256 9736b6c89f5d4f2b6040c745c7f14c2675ec9027f7736128273a54ac20c4070e SHA512 69eafe2006964419f61e0e37c6d0a41aea0ee29efae2161e7789a7e5b37fb634dc55dda758cbf96923172c1efc10166d9b7051d8f88a838fc0407a9f547abe8e WHIRLPOOL 08a0f3bf2aa98848a4c2d0998a81299fa281089e127058cbfe67dc4f021b08ce06d844db94d9d975ee06897bc363289c634e1d575cf69818562f29062b0cc64c
 DIST color-browser-0.3.tar.gz 18685 SHA256 5456c099f8c90d943f8b8e02a4199a631cac0952a91b41bede09b2dc0464fdc7 SHA512 76648adbd1dd990ec513ad9a239e6ed5ba86ce29a689e74f669b943498dadf14d019eff81a416ca574e78f031dbf14ed9b1e467a3d197ff559f75b67033ca2d3 WHIRLPOOL f2523f80fee2f22df0ed8ff2ce81fdf445686026ab9b94d67c472795fbc5a3ec96e6d7b30a8d22f16140fc4493d6cf46a22d408e4bcb1b5a9ffface411bc8747
-EBUILD color-browser-0.3-r1.ebuild 625 SHA256 f1c0b3e4272f8e5b4a39b6ddd7b2123b99a1bab09d7903095026cfe5fd880928 SHA512 ffcec6ed601556a269f029af489a0d86f409a5b92f25e1cbfd6343152a58a9951555dc53363610579c397b7d0afeb3bf539a5e7626b0d3cb6c2dde9b48955e0d WHIRLPOOL 4620fe20bdbe7e257e23fed3162c37d02bd238f9a2ce4f1435be06bcba87602540f4c81c2b0cd5cef0587509c00625ad2005266697fe85c0ac7fb587022240ad
-MISC ChangeLog 1104 SHA256 5fd1ca539cb94b4ceb1c171ddbe401805efa4ad53c4bbaf644370c0eae34df4f SHA512 4c474c196bc9a1a0dc2392e67ad1b8883473663ea4fd5e8001c6062ad20856e06bac2c6e1a29a01e813644ba91f044f90097f2e954e103e5149464db5e64656e WHIRLPOOL c5d92c5c3b9a3ae1716172c1ade7eb77f47f55856515e994b510d1aea2e4ced43aeebcbe96e7990d7959ad4a68eb25435766101eed89fd38c6d847e6a655bba7
+EBUILD color-browser-0.3-r1.ebuild 584 SHA256 39a88056dc2fad319627096c99ee7549a8b830151d6c6b238e3cb1c25bff16ae SHA512 cf17b5d4d9e6ae9c80e1e0e765926ebb41853132a8f3023721e3cde7201d62e639caace2f02a4b65068ae8d3adada18f8ea2e6444923cc3bcf448deb58c0350a WHIRLPOOL 70dd45000ae7508f4f61d6ad95b11e83cedcf711eab749dc5d240037d3af78969a5c6ad3b6f6819e852bde96c72425f0014d01c47d06e4df129dd3256986d5b9
+MISC ChangeLog 1238 SHA256 22a778016db41bd3d0360c275ed4a563a137eb869b4fa9d4a9868b186ffe7898 SHA512 075151e41ca2a4291adcccd3df4728abb821c0503db28730189034c7456d4e48eb4e8752ea7eaa93383245c6c90689ec9d8aba10f1b41082064c5637628a5177 WHIRLPOOL 4972734152f5e6ae787e6713da1884118711d04e21bed14983bd0a0361dbc79cbbd7c548a54f6037947413dba7a9fa69535cf76c9da276ea7cf63bb0e335b092
 MISC metadata.xml 550 SHA256 a6c427a10f5851a571dd4d5e54a662b53136381ed35ec3f2c89fa65c4aaa37ff SHA512 e0e88995d643801a24d2ae197a7b20df0e652b31e067b8d6a426be9bbd9795a6b4d739db5db95424cafd5c92a86c47a8a140fb3c04b0d05f8ab9709ae06f9132 WHIRLPOOL 6a846135f8005f1473561a67a07a6737180fe2e2ed09b87ecd02fc333c740bbb05b55ec7ee9095bf3dc70bc62143df7d99e9cb616dcb3f2ab49d669ec5e0c71a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9etpAAoJEDxpGckxwJCBd4EQAMIZrdJ/EWoVBMCIGWUVzv8n
-hr6nX3w666NzQ3/pAbjuibBLNAKOOD8QIOsQ2uts37mV8u/Orh2SNibWcYSy4aLK
-NENJrbu6Pe73WgPMEqVdSLTwOnm/8KtW8yCzgluc6JlCCxwsoh5btKyY2OQ/usV8
-oSQbAMi5YlBOoGSi1hpGqNktNW9TTv/BRjD0Uqew3pSMShyxoQaSzuWKTaScvTl/
-s+GkJK2rRSOrAGkvonwkZcE2OZknSMc3vO7pQ6PO57LeSVjIfiUH/gCNsFA4gzUu
-ED2zV78UWOfvpCws7I3ODwiUp3JDiwTRxBiV3Pq4+TwptNODToMplXKJQwRUnTXa
-4jYEc8FMGvqKJx/J6iwo0XeuTISDQohlnuoGMyKLPfmxZyoY/iy8FbHj/dBmEhAS
-OWmEijXOhlj9W7XMTegRwHD9czioSHjg1W1xeip35d32bsY/6hnzbfYzGyNfiHDV
-IrOpZsid14mo9MoAiydchpAAAMArm2kK/tGzlkG+5hKGqBGqqw/rJ6U16pDz48oV
-pQVrR3DGOSHeOGMnbD41QjJTVE5GU9XxIPo0AOJjLW/hzpHkLh9QigojxrLt7ZDz
-+ZZCLJpAo/49tLzajZwcuilcKycn48Y00tOoTEGu1wG7A49dRG275i37zrinbDiD
-RbIZIfdm7MD1FiFEkF/L
-=qzbo
+iQGcBAEBCAAGBQJTJZMjAAoJEJQzkH1pP7W4A+kMAKmpkAHjZ24zY+yvu4xAOw34
+3LrL6gnPPNZbygSv0vzI5BsAgjQGTrnw21YZWehqtHpv9p46h0wull6oZcv3nqQ+
+mNnEKZ30jzhfDwcr86FaF4ojQHR/407om0vh/eOF1/S26G5vCuLxtU5+iTNrdDNk
+mom8vCanQy1SD4TjpFlbVN3KVr3A6hz+NYKbApAgKB0t6PfL+HrE8BDdA55wfP/i
+GzXoB+pGnGiwkebNCD5KUFSjayFZ5fuW2J5wj2SOu3ws1VN+WnQ9clSmyo6spu+r
+sgVzT/f2LNs+MZu1rauTF1XDBj/q467LAZqB4GOUNVriRL0NJ+eBVmooX0SlWCVW
+dpIiN1Dpn5Fb77cnlmnahVM7YMgNhAfYt8O0IxK5RdiZZt+BahT2CiMF27zZZpRw
+ZUPT8/a9aa6ZOMvuJJzVGgBQ19AMcXW0NMII/sEEGYcVVmXp0O5IgfSvkFd5mI2X
+kIFuJgfKT0ZckjPs6VhsaTmXx9eviST5HjUmE2rIpQ==
+=uUuM
 -----END PGP SIGNATURE-----
