@@ -1,6 +1,3 @@
-
-;;; color-browser site-lisp configuration
-
 (add-to-list 'load-path "@SITELISP@")
 (autoload 'color-browser "color-browser"
   "A utility for designing Emacs color themes" t)
