@@ -1,11 +1,12 @@
-DEFINED_PHASES=compile install postinst postrm setup unpack
+DEFINED_PHASES=compile configure install postinst postrm prepare setup unpack
 DEPEND=app-emacs/color-theme >=virtual/emacs-21
 DESCRIPTION=A utility for designing Emacs color themes
-HOMEPAGE=http://www.emacswiki.org/elisp/
-KEYWORDS=~amd64 ~ppc ~x86 ~sparc
-LICENSE=GPL-2
+EAPI=5
+HOMEPAGE=http://www.emacswiki.org/emacs/KahlilHodgson
+KEYWORDS=~amd64 ~ppc ~sparc ~x86
+LICENSE=GPL-2+
 RDEPEND=app-emacs/color-theme >=virtual/emacs-21
 SLOT=0
 SRC_URI=mirror://gentoo/color-browser-0.3.tar.gz
 _eclasses_=elisp	ae11b438eee6c692e6c94c9a86999514	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=d0b15fec57b27252157c632cdef89cd8
+_md5_=6ee16ea39c52a1da1db482606be30eec
